Ajuste do metodo de newton para calcular a derivada
